<resources>
    <string name="app_name">ChallengeRVA</string>
    <string name="username">Username</string>
    <string name="forgot_User">Forgot Username?</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="new_account">No account? Create one here!</string>

    <!--Registration Activity strings-->
    <string name="register_intro">Fill in this form to register! Required fields are marked with *</string>
    <string name="register_title">Register</string>
    <string name="register_username">Username *</string>
    <string name="register_password">Password *</string>
    <string name="register_email">E-mail *</string>
    <string name="register_first_name">First Name *</string>
    <string name="register_last_name">Last_Name *</string>
    <string name="register_birth_date">Date of Birth *</string>

    <!--Create Challenge params below-->
    <string name="challengeName">Challenge Name</string>
    <string name="createChallenge">Create A New Challenge!</string>
    <string name="challengeDescription">Challenge Description</string>
    <string name="type">Challenge Type</string>
    <string name="difficulty">Difficulty</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="registrationType">Individual or Team Competition?</string>
    <string name="submitChallengeButton">Create Challenge!</string>
    <string name="minTeam">Minimum Team Members</string>
    <string name="maxTeam">Maximum Team Members</string>
    <string name="measurement">Set Measurement for Logs here</string>
    <string name="registerChallengeButton">Register for Challenge!</string>

    <!--Challenge Types Below -->
    <string name="challengeType1">Cardio</string>
    <string name="challengeType2">Lifting</string>
    <string name="challengeType3">Health</string>

    <!--Registration Types Below-->
    <string name="registrationType1">Individual</string>
    <string name="registrationType2">Team</string>
    <string name="register_re_password">Re-enter password *</string>
    <string name="register_date">Pick a Date</string>

    <!--Measurements for log Types below-->
    <string name="measurementType1">Reps</string>
    <string name="measurementType2">Miles</string>
    <string name="logType">Insert Range Here</string>

    <!--Challenge Search Below -->
    <string name="search_challenges_header"> Search Challenges by...</string>
    <string name="search_challenges_button">Search Challenges!</string>
    <string name="search_challenges_coach">Coach Username</string>

    <!--Forgot Username Below-->
    <string name="forgot_username_body">Forgot your username? Enter your email to reset it.</string>
    <string name="forgot_username_email_button">Reset Username</string>


    <!--Change Username Below-->
    <string name="change_username_header">Change Username</string>
    <string name="change_username_body">Enter your new Username</string>
    <string name="change_username_button">Set New Username</string>

    <!--Forgot Password Below-->
    <string name="forgot_password_body">Forgot your password? Enter your email to reset it.</string>
    <string name="forgot_password_username_button">Reset Password</string>

    <!--Change Password Below-->
    <string name="change_password_header">Change Password</string>
    <string name="change_password_body">Enter your new Password</string>
    <string name="change_password_button">Set New Password</string>
    <string name="app_label">label</string>
    <string name="search_hint">search here</string>

    <!--Search Challenge Below-->
    <string name="challenge_name">Challenge Name</string>
    <string name="challenge_coach">Challenge coach</string>
    <string name="challenge_difficulty">Challenge difficulty</string>
    <string name="challenge_description">Challenge desc</string>
    <string name="challenge_category">Challenge cat</string>
    <string name="challenge_duration">duration</string>
    <string name="empty_search">No results found</string>
    <string-array name="filters">
        <item>Select Filter</item>
        <item>difficulty (low - high)</item>
        <item>difficulty (high - low)</item>
        <item>Start Date (closest - furthest)</item>
        <item>Start Date (furthest - closest)</item>
        <item>Type (Lifting)</item>
        <item>Type (Cardio)</item>
        <item>Type (Health)</item>
    </string-array>
    <string name="title_activity_athlete_home">AthleteHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_coach_your_challenges">Your challenges</string>
    <string name="coach_home_profile">profile</string>
    <string name="coach_home_leaderboard">Leaderboards</string>
    <string name="logout">logout</string>
    <string name="current_challenges">Current</string>
    <string name="prev_challenges">Previous</string>
    <string name="change_profile_pic">Change your profile picture</string>

    <string name="change_bio_header">Change Your Profile Bio</string>
    <string name="change_bio_button">Save Bio</string>


</resources>
