<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/searchChallengeNameTextView"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/challenge_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/searchChallengeImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchChallengeCatTextView"
            android:layout_width="115dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/challenge_category"
            app:layout_constraintStart_toStartOf="@+id/searchChallengeNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/searchChallengeNameTextView" />

        <TextView
            android:id="@+id/searchChallengeDiffTextView"
            android:layout_width="111dp"
            android:layout_height="19dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/challenge_difficulty"
            app:layout_constraintBottom_toBottomOf="@+id/searchChallengeCatTextView"
            app:layout_constraintStart_toEndOf="@+id/searchChallengeCatTextView"
            app:layout_constraintTop_toTopOf="@+id/searchChallengeCatTextView"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/searchChallengeImageView"
            android:layout_width="109dp"
            android:layout_height="98dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[5]" />

        <TextView
            android:id="@+id/searchChallengeCoachTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/challenge_coach"
            app:layout_constraintEnd_toStartOf="@+id/searchChallengeDescTextView"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchChallengeImageView" />

        <TextView
            android:id="@+id/searchChallengeDurTextView"
            android:layout_width="248dp"
            android:layout_height="21dp"
            android:layout_marginTop="16dp"
            android:text="@string/challenge_duration"
            app:layout_constraintEnd_toEndOf="@+id/searchChallengeNameTextView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/searchChallengeNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/searchChallengeCatTextView" />

        <TextView
            android:id="@+id/searchChallengeDescTextView"
            android:layout_width="240dp"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/challenge_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchChallengeDurTextView" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>