<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OffWhite"
    tools:context=".CoachHomeActivity">

    <Button
        android:id="@+id/coachHomeYourChallengesBtn"
        android:layout_width="181dp"
        android:layout_height="163dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/home_coach_your_challenges"
        android:background="@drawable/btn_design_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coachHomeProfileBtn"
        android:layout_width="181dp"
        android:layout_height="163dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/coach_home_profile"
        android:background="@drawable/btn_design_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coachHomeYourChallengesBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coachHomeLeaderboardBtn"
        android:layout_width="178dp"
        android:layout_height="164dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/coach_home_leaderboard"
        android:background="@drawable/btn_design_blue"
        app:layout_constraintEnd_toEndOf="@+id/coachHomeYourChallengesBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/coachHomeYourChallengesBtn"
        app:layout_constraintTop_toBottomOf="@+id/coachHomeYourChallengesBtn" />

    <Button
        android:id="@+id/coachHomeLogoutBtn"
        android:layout_width="181dp"
        android:layout_height="163dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/logout"
        android:background="@drawable/btn_design_orange"
        app:layout_constraintEnd_toEndOf="@+id/coachHomeProfileBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/coachHomeProfileBtn"
        app:layout_constraintTop_toBottomOf="@+id/coachHomeProfileBtn" />

    <Button
        android:id="@+id/coachHomeSearchUsers"
        android:layout_width="181dp"
        android:layout_height="163dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_design_blue"
        android:text="Search Users"
        app:layout_constraintEnd_toEndOf="@+id/coachHomeProfileBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/coachHomeProfileBtn"
        app:layout_constraintTop_toBottomOf="@+id/coachHomeProfileBtn" />
</android.support.constraint.ConstraintLayout>